--- a/myProjects/SPA-(Single Page Application)/index.html
+++ b/myProjects/SPA-(Single Page Application)/index.html
@@ -12,6 +12,7 @@
         }
         body{
             background-color:#DCF9E4;
+            overflow: hidden;
         }
         body>main>section:nth-child(1),container{
             position: relative;
@@ -214,94 +215,59 @@
             <div class="col me-3" >
                 <h4 class="text-secondary" id="cHead">Customers</h4>
                 <input class="form-control form-control-sm mt-3" name="txtcusId" id="txtcusId" placeholder="Id" type="text" >
-                <input class="form-control form-control-sm mt-3" placeholder="Name" type="text" >
-                <input class="form-control form-control-sm mt-3" placeholder="Address" type="text" >
-                <input class="form-control form-control-sm mt-3 mb-3" placeholder="Contact" type="text" >
+                <input class="form-control form-control-sm mt-3" name="txtOrderCusName" id="txtOrderCusName" placeholder="Name" type="text" >
+                <input class="form-control form-control-sm mt-3" name="txtOrderCusAddress" id="txtOrderCusAddress" placeholder="Address" type="text" >
+                <input class="form-control form-control-sm mt-3 mb-3" name="txtOrderCusContact" id="txtOrderCusContact" placeholder="Contact" type="text" >
             </div>
             <div class="col me-3">
                 <h4 class="text-secondary" id="IHead">Items</h4>
                 <input class="form-control form-control-sm mt-3" name="txtitemId"  id="txtitemId"  placeholder="Id" type="text" >
-                <input class="form-control form-control-sm mt-3" placeholder="Name" type="text" >
-                <input class="form-control form-control-sm mt-3" placeholder="Price" type="text" >
-                <input class="form-control form-control-sm mt-3 mb-3" placeholder="Quantity" type="text" >
+                <input class="form-control form-control-sm mt-3"  name="txtOrderItemName"  id="txtOrderItemName"  placeholder="Name" type="text" >
+                <input class="form-control form-control-sm mt-3"  name="txtOrderItemPrice"  id="txtOrderItemPrice"  placeholder="Price" type="text" >
+                <input class="form-control form-control-sm mt-3 mb-3"  name="txtOrderItemQuantity"  id="txtOrderItemQuantity"  placeholder="Quantity" type="text" >
             </div>
             <div class="col">
                 <input class="form-control form-control-sm mt-3" name="txtorderId"  id="txtorderId" placeholder="OrderId" type="text" >
                 <input class="form-control form-control-sm mt-3" name="txtdis"  id="txtdis" placeholder="Disount" type="text" >
-                <input class="form-control form-control-sm mt-3" name="txtttlPrice"  id="txtttlPrice" placeholder="Total Price" type="text" >
-                <button class="btn btn-success mt-3 mb-3" id="btnPlaceOrder">Place Order</button>
+                <input class="form-control form-control-sm mt-3" name="txtOrderQuantity"   id="txtOrderQuantity" placeholder="Quantity" type="text" >
+                <input class="form-control form-control-sm mt-3" name="txtttlPrice" style="color: red" id="txtttlPrice" placeholder="Total Price" type="text" >
+                <button class="btn btn-success mt-3 mb-3" id="btnPlaceOrder"disabled>Place Order</button>
+                <button class="btn btn-primary mt-3 mb-3 " style="margin-left: 30px" id="btnAddToCart">Add To Cart</button>
+             <!--   <button class="btn btn-danger mt-3 mb-3 "style="margin-left: 30px"  id="btnClear"disabled>Clear</button>-->
             </div>
         </div>
 
-        <div class="row mt-5 " id="tablehome">
-            <table class="table table-bordered border-dark table-light" id="tblhome">
+        <div class="row mt-5 " id="tablehome" style="height: 30%">
+            <div style="height:100%;overflow: scroll;position: relative;border: unset;">
+                <table class="table table-bordered border-dark table-light" id="tblhome" >
                 <thead>
                 <tr>
                     <th scope="col"> Order Id</th>
                     <th scope="col">customer Id</th>
                     <th scope="col">Item Id</th>
                     <th scope="col">Discount</th>
+                    <th scope="col">Quantity</th>
                     <th scope="col">Total Price</th>
                 </tr>
                 </thead>
                 <tbody id="tblAddOrder">
-               <!-- <tr>
-                    <th scope="row">O001</th>
-                    <td>C001</td>
-                    <td>I001</td>
-                    <td>10%</td>
-                    <td>1500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O002</th>
-                    <td>C002</td>
-                    <td>I002</td>
-                    <td>5%</td>
-                    <td>2500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O003</th>
-                    <td>C003</td>
-                    <td>I003</td>
-                    <td>5%</td>
-                    <td>4500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O004</th>
-                    <td>C004</td>
-                    <td>I004</td>
-                    <td>5%</td>
-                    <td>4500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O005</th>
-                    <td>C005</td>
-                    <td>I005</td>
-                    <td>5%</td>
-                    <td>4500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O006</th>
-                    <td>C006</td>
-                    <td>I006</td>
-                    <td>5%</td>
-                    <td>4500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O007</th>
-                    <td>C007</td>
-                    <td>I007</td>
-                    <td>5%</td>
-                    <td>4500/=</td>
-                </tr>-->
                 </tbody>
             </table>
+            </div>
         </div>
+        <div class="row " style="margin-top: 3%;width: 250px" >
+            <div class="col-12">
+               <div class="position-absolute w-100 " style="height: 65px;    background-color: #DCF9E4;left: 0;">
+                   <input class="form-control form-control-sm mt-3"  id="lblTotal" style="color: #ff253a;height: 100%;    font-size: 30px;" placeholder="Total" type="text" >
+               </div>
+            </div>
+        </div>
+
     </section>
     <section class="container"  style="display: none"  id="itemcontainer">
         <div id="div1">
             <div class="row">
-                <div class="col-5" id="itemcol" onkeyup="sucessI()">
+                <div class="col-5" id="itemcol" >
                     <h4 class="text-secondary" id="itemHead">Items</h4>
                     <input class="form-control form-control-sm mt-3" name="txtItemId" id="txtitemidnew" placeholder="Id" type="text"  style="box-shadow: none">
                     <p id="errorI" style="color: #ff253a ; font-size: 10px"></p>
@@ -314,8 +280,8 @@
 
                     <div class="row" id="itemadd">
                         <div class="col"> <button class="btn btn-success me-5" id="btnItemSave" disabled>Save</button></div>
-                        <div class="col"> <button class="btn btn-success me-5">Update</button></div>
-                        <div class="col"> <button class="btn btn-danger ">Delete</button></div>
+                        <div class="col"> <button class="btn btn-success me-5" id="btnUpdateItem">Update</button></div>
+                        <div class="col"> <button class="btn btn-danger " id="btnDeleteItem">Delete</button></div>
                     </div>
                 </div>
                 <div class="col">
@@ -323,14 +289,15 @@
                 </div>
                 <div class="col" id="searchbar">
                     <form class="d-flex mt-5">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="txtSearchItemId">
+                        <button class="btn btn-outline-success" type="submit" id="btnSearchItem" >Search</button>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="row mt-5">
-            <table class="table table-bordered border-dark table-light" id="tblItemTable">
+        <div class="row mt-5" style="height:40%;">
+            <div style="height:100%;overflow: scroll;position: relative">
+            <table class="table table-bordered border-dark table-light" id="tblItemTable" >
                 <thead>
                 <tr>
                     <th scope="col">Item code</th>
@@ -384,12 +351,14 @@
                 </tr>-->
                 </tbody>
             </table>
+            </div>
         </div>
+
     </section>
     <section class="container"  style="display: none"  id="CustomerContainer">
         <div id="div2">
             <div class="row">
-                <div class="col-5" id="col5" onkeyup="sucess()">
+                <div class="col-5" id="col5" >
                     <h4 class="text-secondary" id="customerHead">Customers</h4>
                     <input class="form-control form-control-sm mt-3"   name="txtCustomerId" id="txtCustomerId" placeholder="Id" type="text" style="box-shadow: none" >
                     <p id="error" style="color: #ff253a ; font-size: 10px"></p>
@@ -402,8 +371,8 @@
 
                     <div class="row" id="customeradd">
                         <div class="col"> <button class="btn btn-success me-5" id="btnSaveCustomer" disabled>Save</button></div>
-                        <div class="col"> <button class="btn btn-success me-5">Update</button></div>
-                        <div class="col"> <button class="btn btn-danger ">Delete</button></div>
+                        <div class="col"> <button class="btn btn-success me-5" id="btnUpdateCustomer"  disabled>Update</button></div>
+                        <div class="col"> <button class="btn btn-danger " id="btnDeleteCustomer"  disabled>Delete</button></div>
                     </div>
                 </div>
                 <div class="col">
@@ -411,13 +380,14 @@
                 </div>
                 <div class="col" id="searchbar1">
                     <form class="d-flex mt-5">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="txtSearchCustomerId">
+                        <button class="btn btn-outline-success" type="submit" id="btnSearchCustomer">Search</button>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-5" style="height: 30%">
+            <div style="height:100%;overflow: scroll;position: relative">
             <table class="table table-bordered border-dark table-light" id="tblCustomerTable">
                 <thead>
                 <tr>
@@ -472,10 +442,41 @@
                 </tr>-->
                 </tbody>
             </table>
+            </div>
         </div>
     </section>
     <section class="container "  style="display: none"  id="orderContainer">
         <div class="row">
+            <div class="col">
+                <form class="d-flex mt-5">
+                    <input class="form-control me-2" type="search" placeholder="Enter Order Id To Search" aria-label="Search" id="txtOrderDetailsIdSearch">
+                    <button class="btn btn-outline-success" type="submit" id="btnOrderDetailsSearch">Search</button>
+                </form>
+            </div>
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+        <div class="row mt-5">
+            <table class="table table-bordered border-dark table-light" id="tableOrderDetails">
+                <thead>
+                <tr>
+                    <th scope="col"> Order Id</th>
+                    <th scope="col">customer Id</th>
+                    <th scope="col">Discount</th>
+                    <th scope="col">Total Price</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Time</th>
+
+                </tr>
+                </thead>
+                <tbody id="tblOrderDetails">
+
+                </tbody>
+            </table>
+        </div>
+    </section>
+    <section class="container "  style="display: none"  id="orderDetails">
+        <!--<div class="row">
             <div class="col">
                 <form class="d-flex mt-5">
                     <input class="form-control me-2" type="search" placeholder="Enter Order Id To Search" aria-label="Search">
@@ -484,68 +485,22 @@
             </div>
             <div class="col"></div>
             <div class="col"></div>
-        </div>
+        </div>-->
         <div class="row mt-5">
-            <table class="table table-bordered border-dark table-light">
+            <table class="table table-bordered border-dark table-light" id="tableOrderDetailsAll">
                 <thead>
                 <tr>
                     <th scope="col"> Order Id</th>
                     <th scope="col">customer Id</th>
                     <th scope="col">Item Id</th>
                     <th scope="col">Discount</th>
+                    <th scope="col">Quantity</th>
                     <th scope="col">Total Price</th>
+
                 </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">O001</th>
-                    <td>C001</td>
-                    <td>I001</td>
-                    <td>10%</td>
-                    <td>1500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O002</th>
-                    <td>C002</td>
-                    <td>I002</td>
-                    <td>5%</td>
-                    <td>2500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O003</th>
-                    <td>C003</td>
-                    <td>I003</td>
-                    <td>5%</td>
-                    <td>4500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O004</th>
-                    <td>C004</td>
-                    <td>I004</td>
-                    <td>5%</td>
-                    <td>4500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O005</th>
-                    <td>C005</td>
-                    <td>I005</td>
-                    <td>5%</td>
-                    <td>4500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O006</th>
-                    <td>C006</td>
-                    <td>I006</td>
-                    <td>5%</td>
-                    <td>4500/=</td>
-                </tr>
-                <tr>
-                    <th scope="row">O007</th>
-                    <td>C007</td>
-                    <td>I007</td>
-                    <td>5%</td>
-                    <td>4500/=</td>
-                </tr>
+                <tbody id="tblOrderDetailsAll">
+
                 </tbody>
             </table>
         </div>
@@ -587,7 +542,7 @@
                     <div class="row" id="row01" >
                         <div class="col">
                             <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
+                            <input type="email" class="form-control" id="signUpMail" aria-describedby="emailHelp">
                         </div>
                     </div>
                     <div class="row" id="row02" >
@@ -617,43 +572,22 @@
 </main>
 <script src="assets/boostrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/jQuery/jquery-3.6.0.min.js"></script>
+<script src="db/db.js"></script>
 <script src="assets/js/script.js"></script>
-
-<!--<script>
-    /*$(function () {
-        $("#btnPlaceOrder").click(function () {
-            var cusId=$('input[name="txtcusId"]').val();
-            var itemId=$('input[name="txtitemId"]').val();
-            var orderId=$('input[name="txtorderId"]').val();
-            var discount=$('input[name="txtdis"]').val();
-            var total=$('input[name="txtttlPrice"]').val();
-
-            var tr='<tr><td>'+orderId+'</td> <td>'+cusId+'</td> <td>'+itemId+'</td> <td>'+discount+'</td> <td>'+total+'</td></tr>';
-            $("#tblAddOrder").append(tr);
-        });
-        $("#btnItemSave").click(function () {
-            var ItemId=$('input[name="txtItemId"]').val();
-            var ItemName=$('input[name="txtItemName"]').val();
-            var ItemPrice=$('input[name="txtItemPrice"]').val();
-            var ItemQuantity=$('input[name="txtItemQuantity"]').val();
+<script src="model/customerDTO.js"></script>
+<script src="model/itemDTO.js"></script>
+<script src="model/orderDTO.js"></script>
+<script src="model/tm/AddToCart.js"></script>
+<script src="model/orderDetails.js"></script>
+<script src="controller/customerController.js"></script>
+<script src="controller/itemController.js"></script>
+<script src="controller/homeController.js"></script>
+<script src="controller/loginController.js"></script>
+<script src="controller/orderDetailsController.js"></script>
+<script src="controller/signupController.js"></script>
 
 
-            var tr='<tr><td>'+ItemId+'</td> <td>'+ItemName+'</td> <td>'+ItemPrice+'</td> <td>'+ItemQuantity+'</td></tr>';
-            $("#
-tblItem").append(tr);
-        });
-        $("#btnSaveCustomer").click(function () {
-            var CustomerId=$('input[name="txtCustomerId"]').val();
-            var CustomerName=$('input[name="txtCustomerName"]').val();
-            var CustomerAddress=$('input[name="txtCustomerAddress"]').val();
-            var CustomerContact=$('input[name="txtCustomerContact"]').val();
 
 
-            var tr='<tr><td>'+CustomerId+'</td> <td>'+CustomerName+'</td> <td>'+CustomerAddress+'</td> <td>'+CustomerContact+'</td></tr>';
-            $("#tblCustomer").append(tr);
-        });
-    });*/
-
-</script>-->
 </body>
 </html>
