--- a/Assignment.html
+++ b/Assignment.html
@@ -17,15 +17,15 @@
             z-index: 0;
             overflow: hidden;
         }
-        body{
-            overflow-x: hidden;
-        }
+
         header{
             position: fixed;
             width: 100%;
             height: 50px;
             background-color: rgb(121, 118, 114);
             z-index: 2;
+            left: 0;
+            top: 0;
         }
 
         .sign {
@@ -218,18 +218,12 @@
                 opacity: 1;
             }
         }
-
-
-
-
-
-
-
+        
         body > main > section{
             position: relative;
             background-color: #6C6B6F;
             width: 100%;
-            height: 195vh;
+            height: 250vh;
             overflow-x: hidden;
         }
 
@@ -246,6 +240,7 @@
             margin: auto;
             width: 1150px;
             z-index: 1;
+           
         }
         body > main > section > .container a .card:nth-child(1){
             position: absolute;
@@ -396,19 +391,6 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     </style>
 </head>
 <body>
@@ -550,6 +532,24 @@
                     <div class="textBox">
                         <p>This is an assignment of CSS FrameWork with Boostrap converted into SPA(Single page Application.</p>
                         <h3>Assignment 11</h3>
+                    </div>
+                </div>
+            </a>
+            <a href="myProjects/KITT%20theme%20light%20system" target="_blank">
+                <div class="card">
+                    <img src="assets/assignments/a13.png" alt="">
+                    <div class="textBox">
+                        <p>This is an assignment of CSS KnightRiderKit</p>
+                        <h3>Assignment 12</h3>
+                    </div>
+                </div>
+            </a>
+            <a href="myProjects/Java%20Queue" target="_blank">
+                <div class="card">
+                    <img src="assets/assignments/a14.png" alt="">
+                    <div class="textBox">
+                        <p>This is an assignment of CSS JavaQueue.</p>
+                        <h3>Assignment 13</h3>
                     </div>
                 </div>
             </a>
