login btn error fixed

--- a/myProjects/SPA-(Single Page Application)/index.html
+++ b/myProjects/SPA-(Single Page Application)/index.html
@@ -511,14 +511,14 @@
                 <div class="col">
                     <div class="row" id="row1" >
                         <div class="col">
-                            <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <label for="loginexampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="loginexampleInputEmail1" aria-describedby="emailHelp">
                         </div>
                     </div>
                     <div class="row" id="row2" >
                         <div class="col">
-                            <label for="exampleInputPassword1" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
+                            <label for="loginexampleInputPassword1" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="loginexampleInputPassword1">
                         </div>
                     </div>
                     <div class="row" style="margin-top: 30px" id="row3" >
@@ -541,7 +541,7 @@
                 <div class="col">
                     <div class="row" id="row01" >
                         <div class="col">
-                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <label for="signUpMail" class="form-label">Email address</label>
                             <input type="email" class="form-control" id="signUpMail" aria-describedby="emailHelp">
                         </div>
                     </div>
@@ -553,15 +553,17 @@
                     </div>
                     <div class="row" id="row03" >
                         <div class="col">
-                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                            <label for="exampleInputPassword" class="form-label">Password</label>
                             <input type="password" class="form-control" id="exampleInputPassword">
                         </div>
                     </div>
 
                     <div class="row" style="margin-top: 30px" id="row4" >
                         <div class="col">
-                            <a href="#" id="SignUpbtn1">   <button type="submit" class="btn" style="width: 70%; background-color: #1186F4; color: white" >SIGN UP</button>
-                            </a>
+                            <a href="#" id="SignUpbtn1">   <button type="submit" class="btn" style="width: 70%; background-color: #1186F4; color: white" >SIGN UP</button></a>
+                        </div>
+                        <div class="col">
+                            <a href="#" id="Confirm">   <button type="submit" class="btn" style="width: 70%; background-color: green; color: white" >Confirm</button></a>
                         </div>
                     </div>
                 </div>
@@ -579,6 +581,7 @@
 <script src="model/orderDTO.js"></script>
 <script src="model/tm/AddToCart.js"></script>
 <script src="model/orderDetails.js"></script>
+<script src="model/signUp.js"></script>
 <script src="controller/customerController.js"></script>
 <script src="controller/itemController.js"></script>
 <script src="controller/homeController.js"></script>
