--- a/Assignment.html
+++ b/Assignment.html
@@ -535,7 +535,7 @@
                     </div>
                 </div>
             </a>
-            <a href="myProjects/KITT%20theme%20light%20system" target="_blank">
+            <a href="myProjects/KITT%20theme%20light%20system/knightRider.html" target="_blank">
                 <div class="card">
                     <img src="assets/assignments/a13.png" alt="">
                     <div class="textBox">
@@ -544,7 +544,7 @@
                     </div>
                 </div>
             </a>
-            <a href="myProjects/Java%20Queue" target="_blank">
+            <a href="myProjects/Java%20Queue/Queue.html" target="_blank">
                 <div class="card">
                     <img src="assets/assignments/a14.png" alt="">
                     <div class="textBox">
