--- a/index.html
+++ b/index.html
@@ -1408,6 +1408,398 @@
             top: 10px;
             margin: auto;
         }
+        @media all and (max-width: 1024px){
+            main>section:nth-child(1)>div:nth-child(2)>img:nth-child(1) {
+                position: absolute;
+                left: 0px;
+                top: 127px;
+                height: 383px;
+                width: 404px;
+            }
+            main>section:nth-child(1)>img {
+                position: absolute;
+                right: 0;
+                top: 0;
+                bottom: 0;
+                width: 1250px;
+                height: 1000px;
+                opacity: 30%;
+            }
+            #hello {
+                position: absolute;
+                font-family: 'Montserrat', sans-serif;
+                font-size: 45px;
+                left: 414px;
+                top: 124px;
+                color: white;
+            }
+            #I {
+                position: absolute;
+                left: 556px;
+                top: 144px;
+                color: white;
+            }
+            #name {
+                position: absolute;
+                margin: 0px;
+                font-family: 'Concert One', cursive;
+                left: 414px;
+                top: 209px;
+                color: transparent;
+                font-size: 51px;
+                -webkit-text-stroke: 1px #fff;
+                background: url(assets/images/back1.png);
+                -webkit-background-clip: text;
+                animation: back 20s linear infinite;
+            }
+            #n2 {
+                position: absolute;
+                left: 418px;
+                top: 262px;
+                color: #646666;
+            }
+            #list {
+                position: absolute;
+                left: 452px;
+                top: 330px;
+                color: #BBBEC0;
+            }
+            #list>li {
+                padding-bottom: 20px;
+                font-size: 20px;
+            }
+            #abouthr {
+                position: absolute;
+                width: 2px;
+                height: 130px;
+                background-color: #646666;
+                left: 460px;
+                top: 333px;
+                border-radius: 20px;
+            }
+            main>section:nth-child(1)>div:nth-child(3)>a>img {
+                height: 50px;
+                width: 50px;
+                position: relative;
+                left: 112px;
+                top: 510px;
+                padding: 0 5px 0 5px;
+            }
+            .aboutme {
+                height: 95vh;
+                background-color: #040518;
+                margin-top: -23px;
+            }
+            #aboutmeimg>img {
+                position: absolute;
+                right: 13px;
+                top: 80px;
+                width: 373px;
+                height: 370px;
+            }
+            #aboutmefirstdiv {
+                position: absolute;
+                width: 575px;
+                height: 387px;
+                left: 40px;
+                top: 90px;
+                background-color: #090B24;
+                border-radius: 10px;
+            }
+            #aboutmeh1 {
+                position: absolute;
+                color: white;
+                top: 74px;
+                left: 62px;
+                font-size: 32px;
+                font-family: 'Open Sans', sans-serif;
+            }
+            #aboutmepara {
+                position: absolute;
+                color: white;
+                top: 115px;
+                left: 116px;
+                font-size: 18px;
+                color: #AAAFF6;
+                font-family: 'Poppins', sans-serif;
+            }
+            #aboutmeatglinehead {
+                color: white;
+                position: absolute;
+                top: 311px;
+                left: 55px;
+                font-size: 18px;
+                font-family: 'Tauri', sans-serif;
+            }
+            #taglinequote {
+                color: white;
+                position: absolute;
+                top: 354px;
+                left: 92px;
+                font-size: 16px;
+                font-family: 'Tauri', sans-serif;
+            }
+            #aboutmeimg>button {
+                position: absolute;
+                width: 250px;
+                height: 40px;
+                right: 73px;
+                top: 472px;
+                background-color: #0B5E20;
+                color: white;
+                font-size: 24px;
+                border-radius: 10px;
+                font-family: 'Concert One', cursive;
+            }
+            #aboutmeimgicon>a:nth-child(1)>img {
+                height: 50px;
+                width: 50px;
+                position: absolute;
+                right: 232px;
+                top: 528px;
+            }
+            #aboutmeimgicon>a:nth-child(2)>img {
+                height: 50px;
+                width: 50px;
+                position: absolute;
+                right: 169px;
+                top: 527px;
+            }
+            #aboutmeimgicon>a:nth-child(3)>img {
+                height: 45px;
+                width: 45px;
+                position: absolute;
+                right: 109px;
+                top: 529px;
+            }
+            #skilltechnicalskill {
+                position: absolute;
+                width: 450px;
+                height: 324px;
+                left: 40px;
+                top: 170px;
+                background-color: #070725;
+            }
+            #skilltechnicalskill>div:nth-child(1)>img {
+                border-radius: 100%;
+                width: 139px;
+                height: 134px;
+                position: absolute;
+                left: 10px;
+                top: 100px;
+            }
+            #skilltechnicalskill>div:nth-child(2)>img {
+                border-radius: 100%;
+                width: 139px;
+                height: 134px;
+                position: absolute;
+                left: 157px;
+                top: -105px;
+            }
+            #skilltechnicalskill>div:nth-child(3)>img {
+                border-radius: 100%;
+                width: 139px;
+                height: 134px;
+                position: absolute;
+                left: 304px;
+                top: -300px;
+            }
+            #skillmostusingtools {
+                position: absolute;
+                width: 481px;
+                height: 329px;
+                left: 500px;
+                top: 170px;
+                background-color: #070725;
+            }
+            #skillmostusingtools>div:nth-child(1)>img {
+                border-radius: 100%;
+                width: 139px;
+                height: 134px;
+                position: absolute;
+                left: 10px;
+                top: 100px;
+            }
+            #skillmostusingtools>div:nth-child(2)>img {
+                border-radius: 100%;
+                width: 139px;
+                height: 139px;
+                position: absolute;
+                left: 167px;
+                top: 101px;
+            }
+            #skillmostusingtools>div:nth-child(3)>img {
+                border-radius: 100%;
+                width: 139px;
+                height: 135px;
+                position: absolute;
+                left: 316px;
+                top: 101px;
+            }
+            #education>div {
+                width: 339px;
+                height: 200px;
+                background-color: #1B0B47;
+            }
+            #educationinstitute {
+                position: absolute;
+                left: 82px;
+                top: 94px;
+                border-radius: 10px;
+            }
+            #educatiional {
+                position: absolute;
+                left: 633px;
+                top: 300px;
+                border-radius: 10px;
+            }
+            #educationol {
+                position: absolute;
+                left: 94px;
+                top: 496px;
+                border-radius: 10px;
+            }
+            #hr1 {
+                height: 400px;
+                width: 5px;
+                position: absolute;
+                top: 180px;
+                left: 528px;
+                background-color: white;
+                border-radius: 20px;
+            }
+            #hr2 {
+                position: absolute;
+                left: 449px;
+                top: 179px;
+                height: 5px;
+                width: 80px;
+                background-color: white;
+            }
+            #hr3 {
+                position: absolute;
+                left: 528px;
+                top: 380px;
+                height: 5px;
+                width: 80px;
+                background-color: white;
+            }
+            #hr4 {
+                height: 5px;
+                width: 80px;
+                background-color: white;
+                position: absolute;
+                left: 452px;
+                top: 574.7px;
+            }
+            #ediv1:nth-child(10) {
+                position: absolute;
+                left: 432px;
+                top: 182px;
+                width: 20px;
+                height: 20px;
+                background-color: white;
+                border-radius: 10px;
+            }
+            #ediv2:nth-child(11) {
+                position: absolute;
+                left: 605px;
+                top: 382px;
+                width: 20px;
+                height: 20px;
+                background-color: white;
+                border-radius: 10px;
+            }
+            #ediv3:nth-child(12) {
+                width: 20px;
+                height: 20px;
+                background-color: white;
+                border-radius: 10px;
+                position: absolute;
+                left: 440px;
+                top: 575.3px;
+            }
+            #contactmephone>a>img {
+                width: 50px;
+                height: 50px;
+                position: absolute;
+                right: 395px;
+                top: 100px;
+            }
+            #contactmephone>h1 {
+                color: white;
+                font-family: 'Concert One', cursive;
+                position: absolute;
+                right: 255px;
+                top: 90px;
+            }
+            #contactmephone>h2 {
+                color: white;
+                font-family: 'Concert One', cursive;
+                position: absolute;
+                right: 132px;
+                top: 100px;
+            }
+            #contactmeemail>a>img {
+                width: 50px;
+                height: 50px;
+                position: absolute;
+                right: 393px;
+                top: 200px;
+            }
+            #contactmeemail>h1 {
+                color: white;
+                font-family: 'Concert One', cursive;
+                position: absolute;
+                right: 256px;
+                top: 190px;
+            }
+            #contactmeemail>h2 {
+                color: white;
+                font-family: 'Concert One', cursive;
+                position: absolute;
+                right: 7px;
+                top: 200px;
+            }
+            #contactmelocation>img {
+                width: 50px;
+                height: 50px;
+                position: absolute;
+                right: 396px;
+                top: 300px;
+            }
+            #contactmelocation>h1 {
+                color: white;
+                font-family: 'Concert One', cursive;
+                position: absolute;
+                right: 252px;
+                top: 290px;
+            }
+            #contactmelocation>h2 {
+                color: white;
+                font-family: 'Concert One', cursive;
+                position: absolute;
+                right: 3px;
+                top: 300px;
+            }
+            #droplineh1 {
+                color: white;
+                font-family: 'Concert One', cursive;
+                position: absolute;
+                top: 430px;
+                left: 377px;
+            }
+            #dropLineQuote {
+                position: absolute;
+                bottom: 152px;
+                right: 129px;
+            }
+            #dropLineQuote>h2 {
+                font-size: 17px;
+                color: white;
+                font-family: 'Concert One', cursive;
+            }
+            }
 
     </style>
 </head>
